--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing:border-box;
+    font-family:'Inconsolata', monospace;
+    --text-color1:black;
+    --text-color2:white;
+    --background-color1:#1A1E26;
+    --background-color2:#3D4F73;
+    --transition-color:#5ABFA3;
+    --borders-color:#1A1E26;
+    /*Agregar Variables para colores y fuente de la pagina*/
 }
 
 body{
@@ -21,7 +31,7 @@ body{
 }
 
 .navbar{
-    background-color: #1A1E26;
+    background-color: var(--background-color1);
     height: 10vh;
     padding: 10px;
     flex:1 1 0;
@@ -40,7 +50,7 @@ body{
     position: relative;
     display: inline-block;
     text-decoration: none;
-    color: #fff;
+    color: var(--text-color2)
 }
 
 .link::before,.link::after{
@@ -49,7 +59,7 @@ body{
     left: 0%;
     width: 100%;
     height: 3px;
-    background-color: #5ABFA3;
+    background-color:var(--transition-color);
     transform: scaleX(0);
     transition: transform 0.25s;
 }
@@ -78,28 +88,28 @@ main{
     padding-top: 5%;
     padding-bottom: 5%;
     gap: 5%;
-    height: 560px;
+    height: 100vh;
     width: 100vw;
-    background-color: #3D4F73;
+    background-color: var(--background-color2);
 }
 
-main>.info{
+.info{
     height: 150px;
     width: 500px;
-    color: #fff;
+    color: var(--text-color2)
 }
 
-main>.info>.text{
+.text{
     font-size: 20px;
     width: 500px;
-    color: #fff;
+    color: var(--text-color2)
 }
 
-main>.imag{
+.imag{
     display:flex;
     border-style: solid;
     border-width:7px;
-    border-color:#1A1E26;
+    border-color:var(--borders-color);
 }
 
 .landscape{
