--- a/style.css
+++ b/style.css
@@ -178,8 +178,9 @@ main{
     font-size: 3vh;
 }
 
-.phrase{
+#phrase{
     display:flex;
+    font-size: 2.5vh;
     align-items: center;
     justify-content: center;
     height: 50vh;
@@ -187,13 +188,15 @@ main{
     background-color: var(--background-color2);
     color: var(--text-color2);
 }
-#phrase1{
+
+.phrase1{
+    display: flex;
     height: 10vh;
     width: 40vw;
     padding-right: 10vh;
 }
 
-#phrase2{
+.phrase2{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -203,6 +206,8 @@ main{
 
 #footer{
     background-color: var(--background-color1);
+    height: 10vh;
+    width: 100vw;
 }
 
 .footerlist{
